config.json: updated title in header

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -2,7 +2,7 @@
     "title": "Crispin el migrante",
     "path_prefix": "/",
     "header": {
-        "title": "Starter",
+        "title": "Crispín el migrante",
         "has_nav": true,
         "nav_links": [
             {
