--- a/content/data/config.json
+++ b/content/data/config.json
@@ -26,7 +26,7 @@
         "has_nav": true,
         "nav_links": [
             {
-                "label": "Contactactanos",
+                "label": "Contactanos",
                 "url": "/contact",
                 "style": "link"
             },
