--- a/content/data/config.json
+++ b/content/data/config.json
@@ -57,7 +57,7 @@
                 "new_window": true
             }
         ],
-        "content": "&copy; Crispin el migrante. Todos los derecho reservados. Este sitio fue creado por <a href=\"https://www.stackbit.com/?utm_source=deployed-footer\" target=\"_blank\" rel=\"noopener\">Stackbit</a>. Create yours <a href=\"https://app.stackbit.com/create?theme=starter&utm_source=deployed-footer\" target=\"_blank\" rel=\"noopener\">now</a>"
+        "content": "&copy; Crispin el migrante. Todos los derecho reservados. Este sitio fue creado por <a href=\"https://www.stackbit.com/?utm_source=deployed-footer\" target=\"_blank\" rel=\"noopener\">@orosasp</a>. Create yours <a href=\"https://app.stackbit.com/create?theme=starter&utm_source=deployed-footer\" target=\"_blank\" rel=\"noopener\">now</a>"
     },
     "domain": "https://crispinelmigrantecom-6d5e7.netlify.app"
 }
