--- a/content/data/config.json
+++ b/content/data/config.json
@@ -32,7 +32,7 @@
             },
             {
                 "label": "Acerca de",
-                "url": "/terms",
+                "url": "/about",
                 "style": "link"
             }
         ],
