--- a/content/data/config.json
+++ b/content/data/config.json
@@ -40,7 +40,7 @@
         "social_links": [
             {
                 "label": "Facebook",
-                "url": "https://twitter.com/",
+                "url": "https://www.facebook.com/Crispin-Un-Emigrante-104050991600005/",
                 "style": "link",
                 "new_window": true
             },
