config.json: updated label in social_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -45,7 +45,7 @@
                 "new_window": true
             },
             {
-                "label": "GitHub",
+                "label": "Youtube",
                 "url": "https://github.com/",
                 "style": "link",
                 "new_window": true
