config.json: updated url in social_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -46,7 +46,7 @@
             },
             {
                 "label": "Youtube",
-                "url": "https://github.com/",
+                "url": "https://www.youtube.com/",
                 "style": "link",
                 "new_window": true
             },
