config.json: updated content in footer

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -51,7 +51,7 @@
                 "new_window": true
             }
         ],
-        "content": "&copy; Crispin el migrante. Todos los derecho reservados. Este sitio fué creado por <a href=\"https://www.oscarrp.com/\" target=\"_blank\" rel=\"noopener\">@orosasp</a>."
+        "content": "&copy; Crispin el migrante. Todos los derecho reservados. Este sitio fué creado por <a href=\"https://www.oscarrp.com/\" target=\"_blank\" rel=\"noopener\">@orosasp</a>"
     },
     "domain": "https://crispinelmigrantecom-6d5e7.netlify.app"
 }
