--- a/content/data/team/miles-tone.yaml
+++ b/content/data/team/miles-tone.yaml
@@ -1,7 +1,7 @@
 id: miles-tone
 link: blog/author/miles-tone
 first_name: Miles
-last_name: Tone
+last_name: Estevez
 photo: images/miles-tone.jpg
 photo_alt: Miles Tone
 bio: >-
