miles-tone.yaml: updated bio

--- a/content/data/team/miles-tone.yaml
+++ b/content/data/team/miles-tone.yaml
@@ -4,6 +4,5 @@ first_name: Esteban
 last_name: Estevez Rosas
 photo: /images/crispin1.jpg
 photo_alt: Miles Tone
-bio: >-
-  Aliquam vestibulum morbi blandit cursus risus at ultrices mi. Massa placerat
-  duis ultricies lacus. Amet justo donec enim diam.
+bio: |
+  Migrante Mexicano, originario de Teopantlán Puebla.
