miles-tone.yaml: updated bio

--- a/content/data/team/miles-tone.yaml
+++ b/content/data/team/miles-tone.yaml
@@ -4,5 +4,6 @@ first_name: Esteban
 last_name: Estevez Rosas
 photo: /images/crispin1.jpg
 photo_alt: Miles Tone
-bio: |
-  Migrante Mexicano, originario de Teopantlán Puebla.
+bio: >
+  Migrante Mexicano, originario de Teopantlán Puebla. Actualmente viviendo en
+  New York desde principios de los 90's.
