miles-tone.yaml: updated bio

--- a/content/data/team/miles-tone.yaml
+++ b/content/data/team/miles-tone.yaml
@@ -6,4 +6,6 @@ photo: /images/crispin1.jpg
 photo_alt: Miles Tone
 bio: >
   Migrante Mexicano, originario de Teopantlán Puebla. Actualmente viviendo en
-  New York desde principios de los 90's.
+  New York desde principios de los 90's. Tapicero de oficio. Integrante de  la
+  Red de Pueblos Trasnacionales e iniciador en la organización de la fiesta
+  patronal en honor a Santiago Apóstol en New York.
