--- a/content/data/team/miles-tone.yaml
+++ b/content/data/team/miles-tone.yaml
@@ -2,7 +2,7 @@ id: miles-tone
 first_name: Esteban
 last_name: Estevez Rosas
 photo: /images/crispin1.jpg
-photo_alt: Miles Tone
+photo_alt: Esteban Estevez Rosas
 bio: >
   Migrante Mexicano, originario de Teopantlán Puebla. Actualmente viviendo en
   New York desde principios de los 90's. Tapicero de oficio. Integrante de  la
