esteban-estevez.yaml: updated bio

--- a/content/data/team/esteban-estevez.yaml
+++ b/content/data/team/esteban-estevez.yaml
@@ -8,3 +8,6 @@ bio: >
   New York desde principios de los 90's. Tapicero de oficio. Integrante de  la
   Red de Pueblos Trasnacionales e iniciador en la organización de la fiesta
   patronal en honor a Santiago Apóstol en New York.
+
+
+  Facebook: <https://www.facebook.com/estevez.upholstery/>
