esteban-estevez.yaml: changed

--- a/content/data/team/esteban-estevez.yaml
+++ b/content/data/team/esteban-estevez.yaml
@@ -10,4 +10,4 @@ bio: >
   patronal en honor a Santiago Apóstol en New York.
 
 
-  Facebook: <https://www.facebook.com/estevez.upholstery/>
+  Facebook: 
