esteban-estevez.yaml: changed

--- a/content/data/team/esteban-estevez.yaml
+++ b/content/data/team/esteban-estevez.yaml
@@ -6,7 +6,7 @@ photo_alt: Esteban Estevez Rosas
 bio: >
   Migrante Mexicano, originario de Teopantlán Puebla. Actualmente viviendo en
   New York desde principios de los 90's. Tapicero de oficio. Integrante de  la
-  Red de Pueblos Trasnacionales e iniciador en la organización de la fiesta
+  Red de Pueblos Trasnacionales y organización de la fiesta
   patronal en honor a Santiago Apóstol en New York.
 
 
