esteban-estevez.yaml: changed

--- a/content/data/team/esteban-estevez.yaml
+++ b/content/data/team/esteban-estevez.yaml
@@ -6,8 +6,7 @@ photo_alt: Esteban Estevez Rosas
 bio: >
   Migrante Mexicano, originario de Teopantlán Puebla. Actualmente viviendo en
   New York desde principios de los 90's. Tapicero de oficio. Integrante de  la
-  Red de Pueblos Trasnacionales y organizador de la fiesta
-  patronal en honor a Santiago Apóstol en New York.
+  Red de Pueblos Trasnacionales.
 
 
   Facebook: <https://www.facebook.com/estevez.upholstery/>
