--- a/content/data/team/esteban-estevez.yaml
+++ b/content/data/team/esteban-estevez.yaml
@@ -9,4 +9,4 @@ bio: >
   Red de Pueblos Trasnacionales e iniciador en la organización de la fiesta
   patronal en honor a Santiago Apóstol en New York.
 
-facebook
+faceboo
