--- a/content/data/config.json
+++ b/content/data/config.json
@@ -14,6 +14,11 @@
                 "label": "Acerca de",
                 "url": "/about",
                 "style": "link"
+            },
+            {
+                "label": "Contáctactanos",
+                "url": "/contact",
+                "style": "primary"
             }
         ]
     },
