config.json: changed

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -13,7 +13,7 @@
             {
                 "label": "Acerca de",
                 "url": "/about",
-                "style": "primary"
+                "style": "link"
             }
         ]
     },
