config.json: changed

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -8,7 +8,7 @@
             {
                 "label": "Blog",
                 "url": "/blog",
-                "style": "link"
+                "style": "primary"
             },
             {
                 "label": "Acerca de",
