config.json: changed

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -23,7 +23,7 @@
             {
                 "label": "Contáctanos",
                 "url": "/contact",
-                "style": "link"
+                "style": "primary"
             },
             {
                 "label": "Acerca de",
