config.json: changed

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -43,5 +43,5 @@
         ],
         "content": "&copy; Crispin el migrante. Todos los derecho reservados. Este sitio fué creado por <a href=\"https://www.oscarrp.com/\" target=\"_blank\" rel=\"noopener\">@orosasp</a>"
     },
-    "domain": "https://crispinelmigrantecom-6d5e7.netlify.app"
+    "domain": "https://www.crispinelmigrante.com/"
 }
