config.json: changed

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -13,7 +13,7 @@
             {
                 "label": "Blog",
                 "url": "/blog",
-                "style": "primary"
+                "style": "link"
             },
             {
                 "label": "Acerca de",
