--- a/content/data/config.json
+++ b/content/data/config.json
@@ -26,7 +26,7 @@
         "has_nav": true,
         "nav_links": [
             {
-                "label": "Acerca de",
+                "label": "Inicio",
                 "url": "/about",
                 "style": "link"
             },
