config.json: changed

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -27,7 +27,7 @@
         "nav_links": [
             {
                 "label": "Inicio",
-                "url": "/about",
+                "url": "/",
                 "style": "link"
             },
             {
