config.json: changed

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -31,6 +31,11 @@
                 "style": "link"
             },
             {
+                "label": "Inicio",
+                "url": "/",
+                "style": "link"
+            },
+            {
                 "label": "Acerca de",
                 "url": "/about",
                 "style": "link"
