--- a/content/data/config.json
+++ b/content/data/config.json
@@ -31,7 +31,7 @@
                 "style": "link"
             },
             {
-                "label": "Inicio",
+                "label": "Blog",
                 "url": "/",
                 "style": "link"
             },
