--- a/content/data/config.json
+++ b/content/data/config.json
@@ -32,7 +32,7 @@
             },
             {
                 "label": "Blog",
-                "url": "/",
+                "url": "/blog",
                 "style": "link"
             },
             {
