gordon-norman.yaml: updated first_name

--- a/content/data/team/gordon-norman.yaml
+++ b/content/data/team/gordon-norman.yaml
@@ -1,5 +1,5 @@
 id: esteban-estevez
-first_name: Gordon
+first_name: Esteban
 last_name: Norman
 photo: images/gordon-norman.jpg
 photo_alt: Gordon Norman
