gordon-norman.yaml: updated last_name

--- a/content/data/team/gordon-norman.yaml
+++ b/content/data/team/gordon-norman.yaml
@@ -1,6 +1,6 @@
 id: esteban-estevez
 first_name: Esteban
-last_name: Norman
+last_name: Estevez
 photo: images/gordon-norman.jpg
 photo_alt: Gordon Norman
 bio: >-
