gordon-norman.yaml: updated photo

--- a/content/data/team/gordon-norman.yaml
+++ b/content/data/team/gordon-norman.yaml
@@ -1,7 +1,7 @@
 id: esteban-estevez
 first_name: Esteban
 last_name: Estevez
-photo: images/gordon-norman.jpg
+photo: /images/crispin1.jpg
 photo_alt: Gordon Norman
 bio: >-
   Sagittis nisl rhoncus mattis rhoncus urna neque viverra. In est ante in nibh
