--- a/content/data/team/gordon-norman.yaml
+++ b/content/data/team/gordon-norman.yaml
@@ -2,7 +2,7 @@ id: esteban-estevez
 first_name: Esteban
 last_name: Estevez
 photo: /images/crispin1.jpg
-photo_alt: Gordon Norman
+photo_alt: Esteban Estevez
 bio: >-
   Sagittis nisl rhoncus mattis rhoncus urna neque viverra. In est ante in nibh
   mauris cursus mattis molestie porta non pulvinar neque.
