esteban-estevez.yaml: updated last_name

--- a/content/data/team/esteban-estevez.yaml
+++ b/content/data/team/esteban-estevez.yaml
@@ -1,6 +1,6 @@
 id: esteban-estevez
 first_name: Esteban
-last_name: Estevez Rosas
+last_name: Estevez
 photo: /images/crispin1.jpg
 photo_alt: Esteban Estevez Rosas
 bio: >
