config.json: updated label in nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -16,7 +16,7 @@
                 "style": "link"
             },
             {
-                "label": "Acerca de",
+                "label": "Contacto",
                 "url": "/about",
                 "style": "primary"
             }
