config.json: updated url in nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -17,7 +17,7 @@
             },
             {
                 "label": "Contacto",
-                "url": "/about",
+                "url": "/contacto",
                 "style": "primary"
             }
         ]
