config.json: updated url in nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -37,7 +37,7 @@
             },
             {
                 "label": "Acerca de",
-                "url": "/about",
+                "url": "/contacto",
                 "style": "link"
             }
         ],
